--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -20,7 +20,7 @@
 <div id="nav2">
 	<ul id="navbar2">
 		<li ><a class="navi2_other" href = "/member/researcher">Researcher</a></li>
-		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Candidate</a></li>
+		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Student</a></li>
 		<li ><a class="navi2_other" href = "/member/ms">M.S. Student</a></li>
 		<li ><a class="navi2_other" href = "/member/bs">B.S. Course</a></li>
 		<li ><a class="navi2_here" href = "/member/alumni">Alumni</a></li>
@@ -34,13 +34,13 @@
 </div>
 <div id="master">
 	<p id="coarse_title"><b>Master</b> <p/>
-		<div id="people">
-		    <div id="people_photo">
-			    <img src='./../../img/people/ocm.png'>
-		    </div>
-		    <div id="description">
-		    <p>
-			    <b>Name: Chimook Oh<br/>
+	<div id="people">
+	    <div id="people_photo">
+		    <img src='./../../img/people/ocm.png'>
+	    </div>
+	    <div id="description">
+			<p>
+		    <b>Name: Chimook Oh<br/>
 			    Email: ocm@yonsei.ac.kr</b><br/>
 		    </p>
 		    <p>
@@ -59,30 +59,85 @@
 			    -Case study in Jun 2018 and Aug 2018-</i></a>
 		    </p>
 		</div>
-		<div id="people">
-		    <div id="people_photo">
-			    <img src='./../../img/people/khj.jpg'>
-		    </div>
-		    <div id="description">
-		    <p>
-			    <b>Name: Hyejin Kim<br/>
-			    Email: haejin0828@naver.com</b><br/>
-		    </p>
-		    <p>
-			    <b>Research Interests</b><br/>
-			    &#8226; Estimation of aerosol optical depth from chemical transport model<br/>
-		    </p>
-		    <p>
-			    <b>Education</b><br/>
-			    &#8226; M.S. (2020) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
-		    </p>
-		    <p>
-		        <b>Thesis</b><br/>
-			    &#8226; Master's thesis: <a class="paper" href="./../../data/thesis/khj_thesis_2020.pdf" download><i>Aerosol Optical Depth estimated method and validation using National Institute  <br/>
- 			    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    of Environment Research operational numerical forecast model (WRF-CMAQ)</i></a>
-		    </p>
+	</div>
+	<div id="people">
+	    <div id="people_photo">
+		    <img src='./../../img/people/khj.jpg'>
+	    </div>
+	    <div id="description">
+			<p>
+				<b>Name: Hyejin Kim<br/>
+				Email: haejin0828@naver.com</b><br/>
+			</p>
+			<p>
+				<b>Research Interests</b><br/>
+				&#8226; Estimation of aerosol optical depth from chemical transport model<br/>
+			</p>
+			<p>
+				<b>Education</b><br/>
+				&#8226; M.S. (2020) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+				&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
+			</p>
+			<p>
+				<b>Thesis</b><br/>
+				&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/khj_thesis_2020.pdf" download><i>Aerosol Optical Depth estimated method and validation using National Institute  <br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				of Environment Research operational numerical forecast model (WRF-CMAQ)</i></a>
+			</p>
+		</div>	
+	</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/jspark.jpg'>
+		</div>
+		<div id="description">
+			<p>
+				<b>Name: Joonsung Park<br/>
+				Email: ippjs@yonsei.ac.kr<br/>
+				Room: Science Hall #536B</b><br/>
+			<p/>
+			<p>
+				<b>Research Interests</b><br/>
+				&#8226; Atmospheric Modeling<br/>
+			<p/>
+			<p>
+				<b>Education</b><br/>
+				&#8226; M.S. (2021) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+				&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			<p/>
+			<p>
+				<b>Thesis</b><br/>
+				&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/pjs_thesis_2021.pdf" download><i>Comparison of Idealized Sudden Stratospheric Warming Simulation  <br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				in accordance with Dynamical Cores</i></a>
+			</p>		
+		</div>
+	</div>
+	<div id="people">
+		<div id="people_photo">
+				<img src='./../../img/people/rsw.jpg'>
+		</div>
+		<div id="description">
+			<p>
+				<b>Name: Seungwoo Ryu<br/>
+				Email: swryu@yonsei.ac.kr<br/>
+				Room: Science Hall #536B</b><br/>
+			<p/>
+			<p>
+				<b>Research Interests</b><br/>
+				&#8226; Atmospheric Modeling<br/>
+			<p/>
+			<p>
+				<b>Education</b><br/>
+				&#8226; M.S. (2021) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+				&#8226; B.S. (2018) in Physics, The Catholic University of Korea, Bucheon, Korea<br/>
+			<p/>
+			<p>
+				<b>Thesis</b><br/>
+				&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/rsw_thesis_2021.pdf" download><i>Forecast verification of synoptic weather fields of high-PM10 and yellow dust periods  <br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				using TIGGE data</i></a>
+			<p/>
 		</div>
 	</div>
 </div>
