--- a/member/bs/index.html
+++ b/member/bs/index.html
@@ -20,7 +20,7 @@
 <div id="nav2">
 	<ul id="navbar2">
 		<li ><a class="navi2_other" href = "/member/researcher">Researcher</a></li>
-		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Candidate</a></li>
+		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Student</a></li>
 		<li ><a class="navi2_other" href = "/member/ms">M.S. Student</a></li>
 		<li ><a class="navi2_here" href = "/member/bs">B.S. Course</a></li>
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
@@ -28,44 +28,7 @@
 </div>
 <div id="intern">
 	<p id="coarse_title"><b>Undergradate Student</b> <p/>
-		<div id="people">
-		    <div id="people_photo">
-			    <img src='./../../img/people/minjae.jpg'>
-		    </div>
-		    <div id="description">
-		    <p>
-			    <b>Name: Min Jae Lee<br/>
-			    Email: mjae0990@yonsei.ac.kr<br/>
-			    Room: Science Hall #536B</b><br/>
-		    <p/>
-		    <p>
-			    <b>Research Interests</b><br/>
-			    &#8226; Atmospheric Modeling<br/>
-		    <p/>
-		    <p>
-			    <b>Education</b><br/>
-			    &#8226; 2015~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		    <p/>
-		    </div>
-		<div id="people">
-		    <div id="people_photo">
-			    <img src='./../../img/people/sehyun.png'>
-		    </div>
-		    <div id="description">
-		    <p>
-			    <b>Name: Se Hyun Lee<br/>
-			    Email: wwww1996@hanmail.net<br/>
-			    Room: Science Hall #536B</b><br/>
-		    <p/>
-		    <p>
-			    <b>Research Interests</b><br/>
-			    &#8226; Atmospheric Modeling<br/>
-		    <p/>
-		    <p>
-			    <b>Education</b><br/>
-			    &#8226; 2015~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		    <p/>
-		    </div>		
+	
 	</div>
 </div>
 </body>
