--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -20,62 +20,16 @@
 <div id="nav2">
 	<ul id="navbar2">
 		<li ><a class="navi2_other" href = "/member/researcher">Researcher</a></li>
-		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Candidate</a></li>
+		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Student</a></li>
 		<li ><a class="navi2_here" href = "/member/ms">M.S. Student</a></li>
 		<li ><a class="navi2_other" href = "/member/bs">B.S. Course</a></li>
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
 <div id="master">
+
+
 	<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/rsw.jpg'>
-		</div>
-		<div id="description">
-		<p>
-			<b>Name: Seungwoo Ryu<br/>
-			Email: swryu@yonsei.ac.kr<br/>
-			Room: Science Hall #536B</b><br/>
-		<p/>
-		<p>
-			<b>Research Interests</b><br/>
-			&#8226; Atmospheric Modeling<br/>
-		<p/>
-		<p>
-			<b>Education</b><br/>
-			&#8226; 2018~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; B.S. (2018) in Physics, The Catholic University of Korea, Bucheon, Korea<br/>
-		<p/>		
-		</div>
-	</div>
-	<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/kimjy.jpg'>
-		</div>
-		<div id="description">
-		<p>
-			<b>Name: Jae Youp Kim<br/>
-			Email: kimjy.par@yonsei.ac.kr<br/>
-			Room: Science Hall #536B</b><br/>
-		<p/>
-		<p>
-			<b>Research Interests</b><br/>
-			&#8226; Atmospheric Modeling<br/>
-		<p/>
-		<p>
-			<b>Education</b><br/>
-			&#8226; 2019~present, M.S.-Ph.D. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; M.S. (2019) in Information Sciences, University of Science and Technology, Daejeon, Korea<br/>
-			&#8226; B.S. (2017) in Atmospheric Sciences, Kongju National University, Gongju, Korea<br/>
-		<p/>	
-		<p>
-			<b>Research Experiences</b><br/>
-			&#8226; 2015~2019, Research Assistant, Korea Institute of Science and Technology Information, <br/>
-			Daejeon, Korea<br/>
-		<p/>			
-		</div>
-	</div>
-		<div id="people">
 		<div id="people_photo">
 			<img src='./../../img/people/binpyo.jpg'>
 		</div>
@@ -91,32 +45,51 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2019~present, M.S.-Ph.D. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		<p/>		
-		</div>
-	</div>
-	<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/jspark.jpg'>
-		</div>
-		<div id="description">
-		<p>
-			<b>Name: Joonsung Park<br/>
-			Email: ippjs@yonsei.ac.kr<br/>
-			Room: Science Hall #536B</b><br/>
-		<p/>
-		<p>
-			<b>Research Interests</b><br/>
-			&#8226; Atmospheric Modeling<br/>
-		<p/>
-		<p>
-			<b>Education</b><br/>
 			&#8226; 2019~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 		<p/>		
 		</div>
 	</div>
+	<div id="people">
+	    <div id="people_photo">
+		    <img src='./../../img/people/minjae.jpg'>
+	    </div>
+	    <div id="description">
+	    <p>
+		    <b>Name: Min Jae Lee<br/>
+		    Email: mjae0990@yonsei.ac.kr<br/>
+		    Room: Science Hall #536B</b><br/>
+	    <p/>
+	    <p>
+		    <b>Research Interests</b><br/>
+		    &#8226; Atmospheric Modeling<br/>
+	    <p/>
+	    <p>
+		    <b>Education</b><br/>
+			&#8226; 2021~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		    &#8226; B.S. (2021) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+	    <p/>
+	</div>
+	<div id="people">
+	    <div id="people_photo">
+		    <img src='./../../img/people/sehyun.png'>
+	    </div>
+	    <div id="description">
+	    <p>
+		    <b>Name: Se Hyun Lee<br/>
+		    Email: wwww1996@hanmail.net<br/>
+		    Room: Science Hall #536B</b><br/>
+	    <p/>
+	    <p>
+		    <b>Research Interests</b><br/>
+		    &#8226; Atmospheric Modeling<br/>
+	    <p/>
+	    <p>
+		    <b>Education</b><br/>
+			&#8226; 2021~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		    &#8226; B.S. (2021) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+	    <p/>
+	</div>	
 </body>
 
 <footer>
