--- a/member/phd/index.html
+++ b/member/phd/index.html
@@ -20,15 +20,83 @@
 <div id="nav2">
 	<ul id="navbar2">
 		<li ><a class="navi2_other" href = "/member/researcher">Researcher</a></li>
-		<li ><a class="navi2_here" href = "/member/phd">Ph.D. Candidate</a></li>
+		<li ><a class="navi2_here" href = "/member/phd">Ph.D. Student</a></li>
 		<li ><a class="navi2_other" href = "/member/ms">M.S. Student</a></li>
 		<li ><a class="navi2_other" href = "/member/bs">B.S. Course</a></li>
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
-<p><b>To be updated</b></p>
-</body>
 
+</body>
+    <div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/khj.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Hyejin Kim<br/>
+			Email: haejin0828@naver.com<br/>
+			Room: Science Hall #536B</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Estimation of aerosol optical depth from chemical transport model<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; M.S. (2020) M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
+		<p/>		
+		</div>
+	</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/jspark.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Joonsung Park<br/>
+			Email: ippjs@yonsei.ac.kr<br/>
+			Room: Science Hall #536B</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; M.S. (2021) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>		
+		</div>
+	</div>
+		<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/kimjy.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Jae Youp Kim<br/>
+			Email: kimjy.par@yonsei.ac.kr<br/>
+			Room: Science Hall #536B</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2019~present, M.S.-Ph.D. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; M.S. (2019) in Information Sciences, University of Science and Technology, Daejeon, Korea<br/>
+			&#8226; B.S. (2017) in Atmospheric Sciences, Kongju National University, Gongju, Korea<br/>
+		<p/>	
+		<p>
+			<b>Research Experiences</b><br/>
+			&#8226; 2015~2019, Research Assistant, Korea Institute of Science and Technology Information, <br/>
+			Daejeon, Korea<br/>
+		<p/>			
+		</div>
+	</div>
 <footer>
 <div id="address">
 	<p>536B, Science Hall, Yonsei University <br/>
