--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -59,28 +59,8 @@
 	</div>
 </div>
 <div id="postdoc">
-	<p id="coarse_title"><b>Researcher</b> <p/>
-	<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/khj.jpg'>
-		</div>
-		<div id="description">
-		<p>
-			<b>Name: Hyejin Kim<br/>
-			Email: haejin0828@naver.com<br/>
-			Room: Science Hall #536B</b><br/>
-		<p/>
-		<p>
-			<b>Research Interests</b><br/>
-			&#8226; Estimation of aerosol optical depth from chemical transport model<br/>
-		<p/>
-		<p>
-			<b>Education</b><br/>
-			&#8226; M.S. (2020) M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
-		<p/>		
-		</div>
-	</div>
+<!--	<p id="coarse_title"><b>Researcher</b> <p/> -->
+
 </div>
 </body>
 
