--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 <footer>
 <div id="address">
-	<p>536B, Science Hall, Yonsei University <br/>
+	<p>연세대학교 대기과학과 대기모형연구실 <br/>
+	536B, Science Hall, Yonsei University <br/>
 	50, Yonsei-ro, Seodaemun-gu, Seoul, Korea </p>
 </div>
 </footer>
