--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -22,7 +22,7 @@
 <div id="nav2">
 	<ul id="navbar2">
 		<li ><a class="navi2_here" href = "/member/researcher">Researcher</a></li>
-		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Candidate</a></li>
+		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Student</a></li>
 		<li ><a class="navi2_other" href = "/member/ms">M.S. Student</a></li>
 		<li ><a class="navi2_other" href = "/member/bs">B.S. Course</a></li>
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
