--- a/Professor/index.html
+++ b/Professor/index.html
@@ -43,6 +43,7 @@
 		<p/>
 		<p>
 			<b>Research Experiences</b><br/>
+			&#8226;2017-Present: Assistant professor, Department of Atmospheric Sciences, Yonsei University<br/>
 			&#8226;2014-2017: Project Scientist, National Center for Atmospheric Research, Boulder, CO, USA<br/>
 			&#8226;2013-2013: Postdoctoral Fellow, Earth System Laboratory, National Center for Atmospheric<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
