--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -9,23 +9,23 @@
 
 <div id="nav">
 	<ul id="navbar">
-		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
-		<li class="navi"><a class="navi_other" href = "/research">Research</a></li>
-		<li class="navi"><a class="navi_other" href = "/Professor">Professor</a></li>
-		<li class="navi"><a class="navi_here" href = "/member/researcher">Member</a></li>
-		<li class="navi"><a class="navi_other" href = "/publication">Publication</a></li>
-		<li class="navi"><a class="navi_other" href = "/news">News</a></li>
+		<li class="navi"><a class="navi_other" href = "../index.html">Home</a></li>
+		<li class="navi"><a class="navi_other" href = "../research/index.html">Research</a></li>
+		<li class="navi"><a class="navi_other" href = "../Professor/index.html">Professor</a></li>
+		<li class="navi"><a class="navi_here" href = "../member/researcher/index.html">Member</a></li>
+		<li class="navi"><a class="navi_other" href = "../publication/index.html">Publication</a></li>
+		<li class="navi"><a class="navi_other" href = "../news/index.html">News</a></li>
 	</ul>
 </div>
 
 <body>
 <div id="nav2">
 	<ul id="navbar2">
-		<li ><a class="navi2_here" href = "/member/researcher">Researcher</a></li>
-		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Student</a></li>
-		<li ><a class="navi2_other" href = "/member/ms">M.S. Student</a></li>
-		<li ><a class="navi2_other" href = "/member/bs">B.S. Course</a></li>
-		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
+		<li ><a class="navi2_here" href = "../member/researcher/index.html">Researcher</a></li>
+		<li ><a class="navi2_other" href = "../member/phd/index.html">Ph.D. Student</a></li>
+		<li ><a class="navi2_other" href = "../member/ms/index.html">M.S. Student</a></li>
+		<li ><a class="navi2_other" href = "../member/bs/index.html">B.S. Course</a></li>
+		<li ><a class="navi2_other" href = "../member/alumni/index.html">Alumni</a></li>
 	</ul>
 </div>
 <div id="postdoc">
