--- a/publication/index.html
+++ b/publication/index.html
@@ -1,26 +1,80 @@
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel="stylesheet" type="text/css" href="./../css/main.css">
 <link rel="shortcut icon" href="./../img/favicon.ico">
 <title>LAMOR</title>
-<a id="header_image" href="/"><img src='/img/header_small.png', width=960px /></a>
+<a id="header_image" href="/"><img src='./../img/header_small.png', width=960px /></a>
 
 <br/>
 
 <div id="nav">
 	<ul id="navbar">
-		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
-		<li class="navi"><a class="navi_other" href = "/research">Research</a></li>
-		<li class="navi"><a class="navi_other" href = "/Professor">Professor</a></li>
-		<li class="navi"><a class="navi_other" href = "/member/researcher">Member</a></li>
-		<li class="navi"><a class="navi_here" href = "/publication">Publication</a></li>
-		<li class="navi"><a class="navi_other" href = "/news">News</a></li>
+		<li class="navi"><a class="navi_other" href = "../index.html">Home</a></li>
+		<li class="navi"><a class="navi_other" href = "../research/index.html">Research</a></li>
+		<li class="navi"><a class="navi_other" href = "../Professor/index.html">Professor</a></li>
+		<li class="navi"><a class="navi_other" href = "../member/researcher/index.html">Member</a></li>
+		<li class="navi"><a class="navi_here" href = "../publication/index.html">Publication</a></li>
+		<li class="navi"><a class="navi_other" href = "../news/index.html">News</a></li>
 	</ul>
 </div>
 
 <body>
 <div id="home">
-<p>To be updated</p>
+<p style="font-size:25;"> <b> 2021 </b> </p>
+<p>&#8226; Shin, U., <b>Park, S.-H.</b>, Park, J.-S., Koo, J.-H., Yoo, C., Kim, S., Lee, J., (2021). Predictability of PM2.5 in Seoul based on atmospheric blocking forecasts using the NCEP global forecast system. <i>Atmos. Environ.</i>, 246, 118141.
+           doi:<A href=https://doi.org/10.1016/j.atmosenv.2020.118141>https://doi.org/10.1016/j.atmosenv.2020.118141 </A></p>
+<p style="font-size:25;"> <b> 2020 </b> </p>
+<p>&#8226; Lau, W. K. M., Kim, K.-M., Zhao, C., Leung, L. R., and <b>Park, S.-H.</b> (2020). Impact of Dust-Cloud-Radiation-Precipitation Dynamical Feedback on Subseasonal-to-Seasonal Variability of the Asian Summer Monsoon in Global Variable-Resolution Simulations With MPAS-CAM5. <i>Front. Earth Sci.</i>, 8, 226. 
+           doi:<A href=https://doi.org/10.3389/feart.2020.00226>https://doi.org/10.3389/feart.2020.00226 </A></p>
+<p>&#8226; Lee, T.-Y., Shin, U. and <b>Park, S.-H.</b> (2020). Atmospheric Structure for Convective Development in the Events of Cloud Clusters over the Korean Peninsula. <i>Asia-Pacific J. Atmos. Sci.</i>
+           doi:<A href=https://doi.org/10.1007/s13143-020-00211-4>https://doi.org/10.1007/s13143-020-00211-4 </A></p>
+<p style="font-size:25;"> <b> 2019 </b> </p>
+<p>&#8226; Shin, U., Lee, T.-Y., and <b>Park, S.-H.</b> (2019). Environment and processes for heavy rainfall in the early morning over the Korean peninsula during episodes of cloud clusters associated with mesoscale troughs. <i>J. Meteor. Soc. Japan</i>, 97, 
+           doi:<A href=https://doi.org/10.2151/jmsj.2019-036>https://doi.org/10.2151/jmsj.2019-036</A></p>
+<p>&#8226; Kim, J., Sharman, R. D., Benjamin, S. G., Brown, J. M., <b>Park, S.-H.</b>, and Klemp, J. B. (2019). Improvement of Mountain-Wave Turbulence Forecasts in NOAA’s Rapid Refresh (RAP) Model with the Hybrid Vertical Coordinate System, <i>Wea. Forecasting</i>, 34(3), 773-780.
+           doi:<A href=https://doi.org/10.1175/WAF-D-18-0187.1>https://doi.org/10.1175/WAF-D-18-0187.1 </A></p>
+<p>&#8226; <b>Park, S.-H.</b>, Klemp, J. B., and Kim, J. (2019). Hybrid Mass Coordinate in WRF-ARW and Its Impact on Upper-Level Turbulence Forecasting, <i>Mon. Wea. Rev.</i>, 147(3), 971-985.
+           doi:<A href=https://doi.org/10.1175/MWR-D-18-0334.1>https://doi.org/10.1175/MWR-D-18-0334.1 </A></p>
+
+<p style="font-size:25;"> <b> 2018 </b> </p>
+<p>&#8226; Skamarock, W. C., Duda, M. G., Ha, S., and <b> Park, S.-H.</b> (2018). Limited-Area Atmospheric Modeling Using an Unstructured Mesh, <i>Mon. Wea. Rev.</i>, 146(10), 3445-3460.
+           doi:<A href=https://doi.org/10.1175/MWR-D-18-0155.1>https://doi.org/10.1175/MWR-D-18-0155.1 </A></p>
+<p>&#8226; Song, I.-S., Byun, U.-Y., Hong, J., and <b>Park, S.-H.</b> (2018). Domain-size and top-height dependence in regional predictions for the Northeast Asia in spring. <i>Atmos. Sci. Lett.</i>, 19, e799.
+           doi:<A href=https://doi.org/10.1002/asl.799>https://doi.org/10.1002/asl.799 </A></p>
+
+<p style="font-size:25;"> <b> 2017 </b> </p>
+<p>&#8226; Ullrich, P. A., et al.,(2017). DCMIP2016: a review of non-hydrostatic dynamical core design and intercomparison of participating models, <i>Geosci. Model Dev.</i>, 10, 4477–4509.
+           doi:<A href=https://doi.org/10.5194/gmd-10-4477-2017>https://doi.org/10.5194/gmd-10-4477-2017 </A><p>
+<p>&#8226; Choi, Y., Cha, D.-H., Lee, M.-I., Kim, J., Jin, C.-S., <b>Park, S.-H.</b>, and Joh, M. (2017). Satellite radiance data assimilation for binary tropical cyclone cases over the western North Pacific, <i>J. Adv. Model. Earth Syst.</i>, 9, 832– 853.
+           doi:<A href=https://doi.org/10.1002/2016MS000826>https://doi.org/10.1002/2016MS000826 </A></p>
+
+<p style="font-size:25;"> <b> 2016 </b> </p>
+<p>&#8226; <b>Park, S.-H.</b>, Kim, J.-H., Sharman, R. D., and Klemp, J. B. (2016). Update of upper level turbulence forecast by reducing unphysical components of topography in the numerical weather prediction model, <i>Geophys. Res. Lett.</i>, 43, 7718– 7724,
+           doi:<A href=https://doi.org/10.1002/2016GL069446>https://doi.org/10.1002/2016GL069446 </A></p> 
+<p>&#8226; Bierdel, L., Snyder, C., <b>Park, S.-H.</b>, and Skamarock, W. C. (2016). Accuracy of Rotational and Divergent Kinetic Energy Spectra Diagnosed from Flight-Track Winds, <i>J. Atmos. Sci.</i>, 73(8), 3273-3286.
+           doi:<A href=https://doi.org/10.1175/JAS-D-16-0040.1>https://doi.org/10.1175/JAS-D-16-0040.1 </A></p>
+<p>&#8226; Kim, Y.-H., Chun, H.-Y., <b>Park, S.-H.</b>, Song, I.-S., and Choi, H.-J. (2016). Characteristics of gravity waves generated in the jet-front system in a baroclinic instability simulation, <i>Atmos. Chem. Phys.</i>, 16, 4799–4815, 
+           doi:<A href=https://doi.org/10.1175/MWR-D-12-00096.1>https://doi.org/10.1175/MWR-D-12-00096.1</A></p>
+
+<p style="font-size:25;"> <b> Prior to 2015 </b> </p>
+<p>&#8226; Klemp, J. B., Skamarock, W. C., and <b>Park, S.-H.</b> (2015). Idealized global nonhydrostatic atmospheric test cases on a reduced‐radius sphere, <i>J. Adv. Model. Earth Syst.</i>, 7, 1155– 1177.
+           doi:<A href=https://doi.org/10.1002/2015MS000435>https://doi.org/10.1002/2015MS000435 </A></p>
+<p>&#8226; Skamarock, W. C., <b>Park, S.-H.</b>, Klemp, J. B., & Snyder, C. (2014). Atmospheric Kinetic Energy Spectra from Global High-Resolution Nonhydrostatic Simulations, <i>J. Atmos. Sci.</i>, 71(11), 4369-4381.
+           doi:<A href=>https://doi.org/10.1175/JAS-D-14-0114.1 </A></p>
+<p>&#8226; <b>Park, S.-H.</b>, Klemp, J. B., & Skamarock, W. C. (2014). A Comparison of Mesh Refinement in the Global MPAS-A and WRF Models Using an Idealized Normal-Mode Baroclinic Wave Simulation,<i>Mon. Wea. Rev.</i>, 142(10), 3614-3634.
+           doi:<A href=>https://doi.org/10.1175/MWR-D-14-00004.1</A></p>
+<p>&#8226; <b>Park, S.-H.</b>, Skamarock, W. C., Klemp, J. B., Fowler, L. D., & Duda, M. G. (2013). Evaluation of Global Atmospheric Solvers Using Extensions of the Jablonowski and Williamson Baroclinic Wave Test Case, <i>Mon. Wea. Rev.</i>, 141(9), 3116-3129.
+           doi:<A href=https://doi.org/10.1175/MWR-D-12-00096.1>https://doi.org/10.1175/MWR-D-12-00096.1 </A></p>
+<p>&#8226; <b>Park, S.-H.</b>, and Lee, T.-Y., (2013). A monotonic limiter and flux-corrected transport approach for high-order time integration schemes. <i>Asia-Pacific J. Atmos. Sci.</i>, 49, 649-654.
+           doi:<A href=https://doi.org/10.1007/s13143-013-0057-3>https://doi.org/10.1007/s13143-013-0057-3 </A></p> 
+<p>&#8226; Steppeler, J., <b>Park, S.-H.</b>, and Dobler, A., (2013). Forecasts covering one month using a cut-cell model, Geosci. Model Dev., 6, 875–882, doi:https://doi.org/10.5194/gmd-6-875-2013 </p>
+<p>&#8226; Skamarock, W. C., Klemp, J. B., Duda, M. G., Fowler, L. D., <b>Park, S.-H.</b>, & Ringler, T. D. (2012). A Multiscale Nonhydrostatic Atmospheric Model Using Centroidal Voronoi Tesselations and C-Grid Staggering, <i>Monthly Weather Review</i>, 140(9), 3090-3105.
+           doi:<A href=https://doi.org/10.1175/MWR-D-11-00215.1>https://doi.org/10.1175/MWR-D-11-00215.1</A></p>
+<p>&#8226; Steppeler, J., <b>Park, S.-H.</b>, and Dobler, A. (2011). A 5-day hindcast experiment using a cut cell z-coordinate model, <i>Atmos. Sci. Lett.</i>,  12, 340-344.
+           doi:<A href=https://doi.org/10.1002/asl.346>https://doi.org/10.1002/asl.346</A></p>
+<p>&#8226; <b>Park, S.-H.</b>, and Lee, T.-Y. (2009). High-Order Time-Integration Schemes with Explicit Time-Splitting Methods, <i>Mon. Wea. Rev.</i>, 137(11), 4047-4060.
+           doi:<A href=https://doi.org/10.1175/2009MWR2885.1>https://doi.org/10.1175/2009MWR2885.1 </A></p>
+<p>&#8226; <b>Park, S.-H.</b>, and Lee, T.-Y. (2009). Accuracy tests for two-time-level split-explicit scheme, <i>Asia-Pacific J. Atmos. Sci.</i>, 45(3), 347-355.</p>
 </div>
 </body>
 
