--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -21,11 +21,11 @@
 <body>
 <div id="nav2">
 	<ul id="navbar2">
-		<li ><a class="navi2_here" href = "../member/researcher/index.html">Researcher</a></li>
-		<li ><a class="navi2_other" href = "../member/phd/index.html">Ph.D. Student</a></li>
-		<li ><a class="navi2_other" href = "../member/ms/index.html">M.S. Student</a></li>
-		<li ><a class="navi2_other" href = "../member/bs/index.html">B.S. Course</a></li>
-		<li ><a class="navi2_other" href = "../member/alumni/index.html">Alumni</a></li>
+		<li ><a class="navi2_here" href = "../researcher/index.html">Researcher</a></li>
+		<li ><a class="navi2_other" href = "../phd/index.html">Ph.D. Student</a></li>
+		<li ><a class="navi2_other" href = "../ms/index.html">M.S. Student</a></li>
+		<li ><a class="navi2_other" href = "../bs/index.html">B.S. Course</a></li>
+		<li ><a class="navi2_other" href = "../alumni/index.html">Alumni</a></li>
 	</ul>
 </div>
 <div id="postdoc">
