--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -9,12 +9,12 @@
 
 <div id="nav">
 	<ul id="navbar">
-		<li class="navi"><a class="navi_other" href = "../index.html">Home</a></li>
-		<li class="navi"><a class="navi_other" href = "../research/index.html">Research</a></li>
-		<li class="navi"><a class="navi_other" href = "../Professor/index.html">Professor</a></li>
-		<li class="navi"><a class="navi_here" href = "../member/researcher/index.html">Member</a></li>
-		<li class="navi"><a class="navi_other" href = "../publication/index.html">Publication</a></li>
-		<li class="navi"><a class="navi_other" href = "../news/index.html">News</a></li>
+		<li class="navi"><a class="navi_other" href = "../../index.html">Home</a></li>
+		<li class="navi"><a class="navi_other" href = "../../research/index.html">Research</a></li>
+		<li class="navi"><a class="navi_other" href = "../../Professor/index.html">Professor</a></li>
+		<li class="navi"><a class="navi_here" href = "../../researcher/index.html">Member</a></li>
+		<li class="navi"><a class="navi_other" href = "../../publication/index.html">Publication</a></li>
+		<li class="navi"><a class="navi_other" href = "../../news/index.html">News</a></li>
 	</ul>
 </div>
 
