update publication and news

--- a/publication/index.html
+++ b/publication/index.html
@@ -21,7 +21,7 @@
 <body>
 <div id="home">
 <p style="font-size:25;"> <b> 2021 </b> </p>
-<p>&#8226; Shin, U., <b>Park, S.-H.</b>, Park, J.-S., Koo, J.-H., Yoo, C., Kim, S., Lee, J., (2021). Predictability of PM2.5 in Seoul based on atmospheric blocking forecasts using the NCEP global forecast system. <i>Atmos. Environ.</i>, 246, 118141.
+<p>&#8226; Shin, U., <b>Park, S.-H.</b>, Park, J.-S., Koo, J.-H., Yoo, C., Kim, S., and Lee, J., (2021). Predictability of PM2.5 in Seoul based on atmospheric blocking forecasts using the NCEP global forecast system. <i>Atmos. Environ.</i>, 246, 118141.
            doi:<A href=https://doi.org/10.1016/j.atmosenv.2020.118141>https://doi.org/10.1016/j.atmosenv.2020.118141 </A></p>
 <p style="font-size:25;"> <b> 2020 </b> </p>
 <p>&#8226; Lau, W. K. M., Kim, K.-M., Zhao, C., Leung, L. R., and <b>Park, S.-H.</b> (2020). Impact of Dust-Cloud-Radiation-Precipitation Dynamical Feedback on Subseasonal-to-Seasonal Variability of the Asian Summer Monsoon in Global Variable-Resolution Simulations With MPAS-CAM5. <i>Front. Earth Sci.</i>, 8, 226. 
@@ -29,6 +29,10 @@
 <p>&#8226; Lee, T.-Y., Shin, U. and <b>Park, S.-H.</b> (2020). Atmospheric Structure for Convective Development in the Events of Cloud Clusters over the Korean Peninsula. <i>Asia-Pacific J. Atmos. Sci.</i>
            doi:<A href=https://doi.org/10.1007/s13143-020-00211-4>https://doi.org/10.1007/s13143-020-00211-4 </A></p>
 <p style="font-size:25;"> <b> 2019 </b> </p>
+<P>&#8226; Zarzycki et al., (2019). DCMIP2016: the splitting supercell test case, <i> Geosci. Model Dev.</i>, 12, 879–892.
+           doi:<A href=https://doi.org/10.5194/gmd-12-879-2019>https://doi.org/10.5194/gmd-12-879-2019</A></P>    
+<p>&#8226; Skamarock, W. C., Snyder, C., Klemp, J. B., and <b>Park, S.-H.</b> (2019). Vertical Resolution Requirements in Atmospheric Simulation, <i>Mon. Wea. Rev.</i>, 147(7), 2641-2656
+           doi:<A href=https://doi.org/10.1175/MWR-D-19-0043.1>https://doi.org/10.1175/MWR-D-19-0043.1</A></P>
 <p>&#8226; Shin, U., Lee, T.-Y., and <b>Park, S.-H.</b> (2019). Environment and processes for heavy rainfall in the early morning over the Korean peninsula during episodes of cloud clusters associated with mesoscale troughs. <i>J. Meteor. Soc. Japan</i>, 97, 
            doi:<A href=https://doi.org/10.2151/jmsj.2019-036>https://doi.org/10.2151/jmsj.2019-036</A></p>
 <p>&#8226; Kim, J., Sharman, R. D., Benjamin, S. G., Brown, J. M., <b>Park, S.-H.</b>, and Klemp, J. B. (2019). Improvement of Mountain-Wave Turbulence Forecasts in NOAA’s Rapid Refresh (RAP) Model with the Hybrid Vertical Coordinate System, <i>Wea. Forecasting</i>, 34(3), 773-780.
