--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -61,59 +61,6 @@
 		</div>
 	</div>
 	<div id="people">
-	    <div id="people_photo">
-		    <img src='./../../img/people/khj.jpg'>
-	    </div>
-	    <div id="description">
-			<p>
-				<b>Name: Hyejin Kim<br/>
-				Email: haejin0828@naver.com</b><br/>
-			</p>
-			<p>
-				<b>Research Interests</b><br/>
-				&#8226; Estimation of aerosol optical depth from chemical transport model<br/>
-			</p>
-			<p>
-				<b>Education</b><br/>
-				&#8226; M.S. (2020) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-				&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
-			</p>
-			<p>
-				<b>Thesis</b><br/>
-				&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/khj_thesis_2020.pdf" download><i>Aerosol Optical Depth estimated method and validation using National Institute  <br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				of Environment Research operational numerical forecast model (WRF-CMAQ)</i></a>
-			</p>
-		</div>	
-	</div>
-	<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/jspark.jpg'>
-		</div>
-		<div id="description">
-			<p>
-				<b>Name: Joonsung Park<br/>
-				Email: ippjs@yonsei.ac.kr<br/>
-				Room: Science Hall #536B</b><br/>
-			<p/>
-			<p>
-				<b>Research Interests</b><br/>
-				&#8226; Atmospheric Modeling<br/>
-			<p/>
-			<p>
-				<b>Education</b><br/>
-				&#8226; M.S. (2021) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-				&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			<p/>
-			<p>
-				<b>Thesis</b><br/>
-				&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/pjs_thesis_2021.pdf" download><i>Comparison of Idealized Sudden Stratospheric Warming Simulation  <br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				in accordance with Dynamical Cores</i></a>
-			</p>		
-		</div>
-	</div>
-	<div id="people">
 		<div id="people_photo">
 				<img src='./../../img/people/rsw.jpg'>
 		</div>
@@ -137,6 +84,27 @@
 				&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/rsw_thesis_2021.pdf" download><i>Forecast verification of synoptic weather fields of high-PM10 and yellow dust periods  <br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				using TIGGE data</i></a>
+			<p/>
+		</div>
+	</div>
+	<div id="people">
+		<div id="people_photo">
+				<img src='./../../img/people/kjy.jpg'>
+		</div>
+		<div id="description">
+			<p>
+				<b>Name: Jae Youp Kim<br/>
+				Email: kimjy.par@yonsei.ac.kr<br/>
+			<p/>
+			<p>
+				<b>Research Interests</b><br/>
+				&#8226; Atmospheric Modeling<br/>
+			<p/>
+			<p>
+				<b>Education</b><br/>
+				&#8226; 2019~, M.S.-Ph.D. in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+				&#8226; M.S. (2019) in Information Sciences, University of Science and Technology, Daejeon, Korea<br/>
+				&#8226; B.S. (2017) in Atmospheric Sciences, Kongju National University, Gongju, Korea<br/>
 			<p/>
 		</div>
 	</div>
