--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -89,7 +89,7 @@
 	</div>
 	<div id="people">
 		<div id="people_photo">
-				<img src='./../../img/people/kjy.jpg'>
+				<img src='./../../img/people/kimjy.jpg'>
 		</div>
 		<div id="description">
 			<p>
