--- a/member/bs/index.html
+++ b/member/bs/index.html
@@ -28,7 +28,27 @@
 </div>
 <div id="intern">
 	<p id="coarse_title"><b>Undergradate Student</b> <p/>
-	
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/binpyo.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Inpyo Park<br/>
+			Email: binpyo@yonsei.ac.kr<br/>
+			Room: Science Hall #536B</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2019~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>		
+		</div>
+	</div>
 	</div>
 </div>
 </body>
