--- a/member/bs/index.html
+++ b/member/bs/index.html
@@ -30,12 +30,12 @@
 	<p id="coarse_title"><b>Undergradate Student</b> <p/>
 	<div id="people">
 		<div id="people_photo">
-			<img src='./../../img/people/binpyo.jpg'>
+			<img src='./../../img/people/YSM.jpg'>
 		</div>
 		<div id="description">
 		<p>
-			<b>Name: Inpyo Park<br/>
-			Email: binpyo@yonsei.ac.kr<br/>
+			<b>Name: Seungmin Yu<br/>
+			Email: ksysm3@yonsei.ac.kr<br/>
 			Room: Science Hall #536B</b><br/>
 		<p/>
 		<p>
@@ -44,8 +44,7 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2019~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; 2018~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 		<p/>		
 		</div>
 	</div>
