--- a/member/bs/index.html
+++ b/member/bs/index.html
@@ -30,7 +30,7 @@
 	<p id="coarse_title"><b>Undergradate Student</b> <p/>
 	<div id="people">
 		<div id="people_photo">
-			<img src='./../../img/people/YSM.jpg'>
+			<img src='./../../img/people/ysm.jpg'>
 		</div>
 		<div id="description">
 		<p>
