--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -87,8 +87,34 @@
 			<p/>
 		</div>
 	</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/binpyo.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Inpyo Park<br/>
+			Email: binpyo@yonsei.ac.kr<br/>
+			Room: Science Hall #536B</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2019~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>		
+		<p>
+			<b>Thesis</b><br/>
+			&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/binpyo_thesis_2022.pdf" download><i><br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			  </i></a>
+		</div>
+	</div>
 </div>
-<div id="master">
+<div id="Intern">
     <p id="coarse_title"><b>Intern</b> <p/>
 	    <div id="people">
 			<div id="people_photo">
