--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -108,9 +108,9 @@
 		<p/>		
 		<p>
 			<b>Thesis</b><br/>
-			&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/binpyo_thesis_2022.pdf" download><i><br/>
+			&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/binpyo_thesis_2022.pdf" download><i><br/>Effect of vertical mixing on gravity wave generation and 
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			  </i></a>
+			development in idealized normal-mode baroclinic wave simulation </i></a>
 		</div>
 	</div>
 </div>
