--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -66,7 +66,27 @@
 			&#8226; 2021~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 		    &#8226; B.S. (2021) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 	    <p/>
-	</div>	
+	</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/ysm.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Seungmin Yu<br/>
+			Email: ksysm3@yonsei.ac.kr<br/>
+			Room: Science Hall #536B</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2018~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>		
+		</div>
+	</div>
 </body>
 
 <footer>
