--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -83,7 +83,7 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2018~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2022) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 		<p/>		
 		</div>
 	</div>
