--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -103,7 +103,7 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2019~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; M.S. (2022) course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 		<p/>		
 		<p>
